<resources>
    <string name="app_name">푸드 레시피</string>
    <string name="description">음식 정보</string>
    <string name="hansik">한식</string>
    <string name="hansik_desc">김치, 찌개, 불고기</string>
    <string name="yangsik">양식</string>
    <string name="yangsik_description">스테이크, 파스타, 피자, 햄버거</string>
    <string name="chinese">중식</string>
    <string name="chinese_description">면요리, 고기요리, 혼합요리</string>
    <string name="japanese">일식</string>
    <string name="japanese_description">덮밥, 돈가스, 면요리</string>
    <string name="food_list">음식 리스트</string>
    <string name="detail">자세히</string>
</resources>